# PolarSearch

./: .gitignore  README.md
NGT/index/: grp  prf  tre
NGT/index/qg/: ivt  obj  prf  qr  rqcb
NGT/index/qg/global/: grp  obj  prf  tre
NGT/index/qg/local-0/: grp  obj  tre
NGT/index/qg/local-1/: grp  obj  tre
NGT/index/qg/local-10/: grp  obj  tre
NGT/index/qg/local-100/: grp  obj  tre
NGT/index/qg/local-101/: grp  obj  tre
NGT/index/qg/local-102/: grp  obj  tre
NGT/index/qg/local-103/: grp  obj  tre
NGT/index/qg/local-104/: grp  obj  tre
NGT/index/qg/local-105/: grp  obj  tre
NGT/index/qg/local-106/: grp  obj  tre
NGT/index/qg/local-107/: grp  obj  tre
NGT/index/qg/local-108/: grp  obj  tre
NGT/index/qg/local-109/: grp  obj  tre
NGT/index/qg/local-11/: grp  obj  tre
NGT/index/qg/local-110/: grp  obj  tre
NGT/index/qg/local-111/: grp  obj  tre
NGT/samples/: CMakeLists.txt
NGT/samples/dmds/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dmds_test  dmds_test.cpp
NGT/samples/qg-l2-float/: qg-l2-float.cpp
SCANN/: scann_test.cc
build_example/: README.md
build_example/annoy/: build.sh  precision_test.cpp
build_example/faiss/: build.sh
build_example/hnswlib/: build.sh
build_example/hnswlib/hnswlib/: CMakeCache.txt  Makefile  cmake_install.cmake
knn/: knn.cc
scripts/: 1378_98.cc  1400_986.cc  1650_985.cc  1720_988.cc  992.cc  994.cc  Makefile  calc_dis.cc  data_gen.cc  fp16_test.cc  knng.cc  knng_2.cc  knng_3.cc  knng_back.cc  knng_kmean.cc
scripts/.reprozip-trace/: config.yml  trace.sqlite3
(+337 files in other folders)
